--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+npm body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav a {
+  font-size: 18px;
+}
+
+nav a.active {
+  color: rgb(8, 185, 255) !important;
+  font-weight: bold;
+  text-decoration: none;
+
+}
+
+nav a:hover {
+  text-decoration: none;
+  color: rgb(8, 185, 255) !important;
 }
