--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,9 @@ body {
 }
 
 /* .fa-solid {
-    color: rgb(8, 185, 255) !important
+    color: rgb(255,69,0) !important
 }
 
 .fa-regular {
-    color: rgb(8, 185, 255)
+    color: rgb(255,69,0)
 } */
